--- a/Configs/.themerc
+++ b/Configs/.themerc
@@ -1,9 +1,11 @@
+#!/bin/bash
+
 export COLOR1="#ff00af"
 export COLOR2="#2c062c"
 export COLOR3="#5fffd7"
 export COLOR4="#262626"
 export COLOR5=17
 
-export LEMONBARBG="#9c0a6f87"
+export LEMONBARBG="#9c2a2f67"
 
-export LIGHTWEIGHT=0
+export LIGHTWEIGHT=1
