--- a/Configs/.config/picom/picom.conf
+++ b/Configs/.config/picom/picom.conf
@@ -26,13 +26,13 @@ shadow-offset-x = -7;
 shadow-offset-y = -7;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-red = 0
+shadow-red = 0
 
 # Green color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-green = 0
+shadow-green = 0.1
 
 # Blue color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-blue = 0
+shadow-blue = 0.2
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
 # shadow-color = "#000000"
@@ -108,7 +108,7 @@ inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 0.2;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -144,13 +144,13 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 10
+corner-radius = 8
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+# rounded-corners-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'"
+# ];
 
 
 #################################
@@ -160,7 +160,7 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
-# blur-size = 12
+# blur-size = 15
 #
 # blur-deviation = false
 #
@@ -223,7 +223,7 @@ dithered-present = false;
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true;
+vsync = false;
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
