--- a/Configs/.config/i3/config
+++ b/Configs/.config/i3/config
@@ -183,13 +183,25 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $purple "#af30ff"
+set $purplet "#af30ff77"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        colors {
+            background        #000000AA
+            statusline        $purple
+            separator         #69696969
+
+            focused_workspace #af30ff   $purplet #ffffff
+        }
+        i3bar_command i3bar --transparency
         status_command i3status
         font pango:DejaVu Sans Mono 11
         tray_output none
         separator_symbol "•"
+        padding 2px 3px
 }
 
 # smart_borders on
@@ -197,9 +209,15 @@ focus_follows_mouse no
 mouse_warping none
 focus_on_window_activation urgent
 for_window [all] title_window_icon on
-for_window [all] title_window_icon padding 4px
-default_border pixel 3
-for_window [all] border pixel 3
+for_window [all] title_window_icon padding 2px
+default_border pixel 4
+for_window [all] border pixel 4
 
-gaps inner 5
+gaps inner 7
 gaps outer 10
+
+client.focused $purple $purplet #ffffff $purplet
+client.background $purplet
+
+exec --no-startup-id "picom &"
+exec --no-startup-id "feh --bg-fill $HOME/RiceAssets/Backgrounds/bg3.jpg"
