--- a/Configs/.config/picom/picom.conf
+++ b/Configs/.config/picom/picom.conf
@@ -74,7 +74,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -108,7 +108,7 @@ inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.2;
+frame-opacity = 1.0;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -160,24 +160,24 @@ corner-radius = 0
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
-# blur-size = 15
+# blur-size = 30
 #
 # blur-deviation = false
 #
-# blur-strength = 5
+# blur-strength = 10
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+# blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+# blur-background-frame = true
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
