--- a/Configs/.config/i3/config
+++ b/Configs/.config/i3/config
@@ -49,7 +49,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -198,7 +198,7 @@ bar {
         }
         i3bar_command i3bar --transparency
         status_command i3status
-        font pango:DejaVu Sans Mono 11
+        font pango:DejaVu Sans Mono 12
         tray_output none
         separator_symbol "•"
         padding 2px 3px
@@ -220,7 +220,7 @@ client.focused $purple $purplet #ffffff $purplet
 client.background $purplet
 
 exec --no-startup-id "picom &"
-exec --no-startup-id "feh --bg-fill $HOME/RiceAssets/Backgrounds/bg3.jpg"
+exec --no-startup-id "feh --bg-fill $HOME/RiceAssets/Backgrounds/bg9.jpg"
 
 bindsym Print exec --no-startup-id flameshot full -d 0 -c -p "$HOME/Pictures/Screenshots/" &
 bindsym $mod+Print exec --no-startup-id flameshot screen -d 0 -c -p "$HOME/Pictures/Screenshots/" &
