--- a/Configs/.editorconfig
+++ b/Configs/.editorconfig
@@ -8,3 +8,9 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 max_line_length = 80
+
+[Makefile]
+indent_style = tab
+
+[*.{js,ts,jsx,tsx,html,css}]
+indent_size = 2
