added nvim, deleted some stuff

--- a/Configs/.config/alacritty/alacritty.toml
+++ b/Configs/.config/alacritty/alacritty.toml
@@ -1,23 +1,1 @@
-live_config_reload = true
-
-[window]
-  decorations = "None"
-  opacity = 0.92
-  blur = true
-  dynamic_padding = true
-
-[font]
-  normal = { family = "Cousine Nerd Font", style = "Regular" }
-  size = 11
-
-[colors]
-  cursor = { text = "#121212", cursor = "#df90ff" }
-  vi_mode_cursor = { text = "#121212", cursor = "#af30ff" }
-  transparent_background_colors = true
-
-[cursor]
-  style = { shape = "Block", blinking = "Off" }
-  vi_mode_style = { shape = "Block", blinking = "Off" }
-
-[mouse]
-  hide_when_typing = true
+/home/logemi/Rice/Configs/.config/alacritty/alacritty.toml
