--- a/Configs/.config/tmux/tmux.conf
+++ b/Configs/.config/tmux/tmux.conf
@@ -27,15 +27,10 @@ bind '%' split-window -h -c "#{pane_current_path}"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'wfxr/tmux-power'
 
-# dracula plugins
-# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui, playerctl, kubernetes-context, synchronize-panes
-set -g @dracula-plugins 'git battery cpu-usage ram-usage ssh-session time'
-set -g @dracula-day-month true
-set -g @dracula-military-time true
-set -g @dracula-no-repo-message "None"
+set -g @tmux_power_theme 'moon'
 
 run '~/.tmux/plugins/tpm/tpm'
 
