--- a/Configs/.config/tmux/tmux.conf
+++ b/Configs/.config/tmux/tmux.conf
@@ -28,9 +28,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'wfxr/tmux-power'
+# set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'rose-pine/tmux'
 
-set -g @tmux_power_theme 'moon'
+# set -g @tmux_power_theme 'moon'
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
 
 run '~/.tmux/plugins/tpm/tpm'
 
